syntax = "proto3";
package lbm.consortium.v1;

option go_package = "github.com/line/lbm-sdk/x/consortium/types";

// EventUpdateValidatorAuth is emitted after updating validator auth info.
message EventUpdateValidatorAuth {
  string operator_address = 1;
}
